fixed z-index layers

--- a/src/components/feedback/Feedback.scss
+++ b/src/components/feedback/Feedback.scss
@@ -7,7 +7,7 @@
     bottom: 20px;
     right: 30px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 3;
 
     .feedback-logo {
       font-size: 2rem;
