--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -33,7 +33,7 @@
       position: absolute;
       top: 2rem;
       right: 2rem;
-      z-index: 4;
+      z-index: 5;
     }
   }
 
@@ -48,15 +48,14 @@
       width: 70vw;
       height: 100vh;
       padding: 20vh 0 0 2rem;
-      border-left: 1px solid gray;
       position: fixed;
       inset: 0 0 0 100vw;
-      z-index: 3;
+      z-index: 4;
       flex-direction: column;
       justify-content: flex-start;
       gap: 2rem;
       align-items: flex-start;
-      background-color: #151515;
+      background-color: rgba(0, 0, 0, 0.8);
       backdrop-filter: blur(3px);
       transition: transform 250ms ease-out;
 
