--- a/src/components/scrollTop/ScrollTop.scss
+++ b/src/components/scrollTop/ScrollTop.scss
@@ -5,7 +5,7 @@
   position: fixed;
   bottom: 20px;
   right: 80px;
-  z-index: 1;
+  z-index: 3;
   cursor: pointer;
 
   .scroll-top-logo {
